minor overall corrections

--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ sass:
 # Site Data
 url: # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: # the subpath of your site, e.g. /blog
-title: Simple Texture
-description: "A gem-based responsive simple texture styled Jekyll theme."
-keywords: 'jekyll,theme,gem-based,blog'
+title: Spasov Online
+description: "The blog for pentesting, programming and technology"
+keywords: 'blog, pentesting, programming, technology'
 author:
   name:
   job_title:
@@ -35,11 +35,11 @@ author:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/yizeng/jekyll-theme-simple-texture
+      url: https://www.github.com/WhiteLord
     - name: instagram
       url:
     - name: linkedin
-      url:
+      url: https://www.linkedin.com/in/georgi-spasov-b70403127
     - name: stackoverflow
       url:
     - name: twitter
@@ -47,9 +47,9 @@ author:
     - name: vk
       url:
 home:
-  section1: <h1>Simple Texutre</h1>
-  section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
+  section1: <h1>Spasov Online</h1>
+  section2: <h2>A blog about cyber security, programming and technology</h2>
+  section3: 
 blog:
   cc_license: # A link to CC License of your choice, e.g. http://creativecommons.org/licenses/by-sa/4.0/.
   cc_license_image: # An image of your CC License, e.g. /assets/images/theme/cc-by-sa.png
@@ -59,7 +59,7 @@ disqus:
   shortname:
   public_key:
 google_analytics:
-addthis_public_id: # AddThis sharing plugin. See http://www.addthis.com/
+addthis_public_id: ra-59caa8be11e40484
 
 paths:
   home: /
